// proto/water_level_service.proto
syntax = "proto3";
package water_level_service;
option go_package = "./water_level_service;water_level_service";

import "google/protobuf/empty.proto";

// Define the service
service Instance {
  // 开启实例
  rpc StartInstance (StartInstanceRequest) returns (InstanceId);
  // 更新实例参数
  rpc UpdateInstanceParams (UpdateInstanceParamsRequest) returns (google.protobuf.Empty);
  // 暂停实例
  rpc StopInstance (InstanceId) returns (google.protobuf.Empty);
  // 查看所有启动的实例ids
  rpc ListInstances (google.protobuf.Empty) returns (InstanceListResponse);
  // 查看实例实时数据
  rpc GetInstanceState (InstanceId) returns (GetStateResponse);

  // 资金归集时查询信息
  rpc GetPortfolioUnwindingInfo (PortfolioUnwindingRequest) returns (GetPortfolioUnwindingResponse);
  // 资金归集
  rpc PortfolioUnwinding (PortfolioUnwindingRequest) returns (google.protobuf.Empty);

  rpc GetInterestRates (GetInterestRatesRequest) returns (GetInterestRatesResponse);
}


enum CurrencyType {
  Token = 0;
  StableCoin = 1;
}

// 定义一个枚举类型
enum ExchangeType {
  Unknown = 0;  // 枚举必须从 0 开始
  Binance = 1; //  Binance.com
  Gate = 2; //  Gate.io
}

// Message definitions
message StartInstanceRequest {
  string        instance_id = 1; // 中台实例id
  string        exchange_type = 2; // 目前只有Binance一个值
  int32        currency_type = 3; // 交易币种类型 0-普通Token(SOL,TRUMP,...) 1-StableCoin(比如USDT,USDC)
  string        currency = 4; // 交易币种/stable coin name/token name
  optional string pub_key = 5; // 交易币种在solana mainnet链上的pubkey，SOL留空，其他token必填
  optional TokenThresholdConfig   token_threshold_config = 6; // 普通币种配置
  optional StableCoinThresholdConfig stable_coin_threshold_config = 7; // 稳定币配置
  SecretKey secret_key = 8; //交易所密钥信息
  bool         auto_borrow = 9; // 交易时是否自动借款，如果启用，则水位调节不再关心CEX账户里的余额是否足够，只要关心链上钱包余额是否足够
}

message TokenThresholdConfig {
  string alert_threshold = 1;
  string buy_trigger_threshold = 2;
  //string target_balance_threshold = 3; // 取消这个字段，改为(buy_trigger_threshold + target_balance_threshold)/2
  string sell_trigger_threshold = 4;
  // 最小充值金额阈值
  string min_deposit_amount_threshold = 5;
  // 最小提现金额阈值
  string min_withdraw_amount_threshold = 6;
}

message StableCoinThresholdConfig {
  string alert_threshold = 1; // 报警阈值
}

message UpdateInstanceParamsRequest {
  string instance_id = 1;
  int32    currency_type = 2; // 要保持和StartInstanceRequest中的currency_type一致，否则会报错
  optional TokenThresholdConfig   token_threshold_config = 3; // 普通币种配置
  optional StableCoinThresholdConfig stable_coin_threshold_config = 4; // 稳定币配置
  bool auto_borrow = 5; // 交易时是否自动借款，如果启用，则水位调节不再关心CEX账户里的余额是否足够，只要关心链上钱包余额是否足够
}

message InstanceListResponse {
  repeated string instance_ids = 1;
}

message InstanceId {
  string instance_id = 1;
}

message GetStateResponse {
  bool trader_switch = 1; // 交易开关 true:开 false:关
  string currency = 2; // 交易币种
  string margin_account_balance = 3; // 交易所全仓杠杆账户该币种余额，空字符表示未获取到余额
  string spot_account_balance = 4; // 交易所现货账户该币种余额，空字符表示未获取到余额
  string chain_wallet_balance = 5; // 链上钱包该币种余额，空字符表示未获取到余额
  string borrowed_amount = 6; 
  string max_borrowable_amount = 7;
  StartInstanceRequest instance_params = 8;
  string instance_error = 9; // 实例错误信息
  optional InstanceTaskState instance_task_state = 10; // 实例任务状态
  int32 water_level_status = 11; // 0-初始状态 1-水位调节中
}

message InstanceTaskState {
  string task_type = 1; // 任务类型
  string task_step = 2; // 任务步骤
  string task_status = 3; // 任务状态
  string task_error = 4; // 任务错误信息
}

message SecretKey {
  // for cex 2025-03-19根据今日新约定，以后所有的交易所都是用子账号交易，母账号提现的模式
  ExchangeAccount trader_account = 1;
  ExchangeAccount master_account = 2;
  // for dex
  string chain_wallet_private_key = 3;
}

message ExchangeAccount {
  string account_name = 1;
  string uid = 2;
  string email = 3;
  string api_key = 4;
  string secret = 5;
  string passphrase = 6;
}

message PortfolioUnwindingRequest {
  ExchangeType  exchange_type = 1;
  string        token_name = 2; // 交易币种/token name
  optional string token_address = 3; // 交易币种在solana mainnet链上的pubkey，SOL留空，其他token必填
  SecretKey    secret_key = 4; // 交易所的api-key，secret，passphrase 以及 chain wallet private key
}

message GetPortfolioUnwindingResponse {
  string token_name = 1;
  string wallet_balance = 2;
  string trader_account_margin_balance = 3;
  string trader_account_spot_balance = 4;
  string master_account_spot_balance = 5; // 如果request里的master_account为空（即trader_account和master_account是同一个账户），则返回的master_account_*总为0
  string borrowed = 6;
  string borrowable = 7;
}

message GetInterestRatesRequest {
  ExchangeType  exchange_type = 1;
  SecretKey    secret_key = 2; // 交易所的api-key，secret，passphrase 以及 chain wallet private key
  repeated string currencies = 3; // 需要查询的币种列表
}

message GetInterestRatesResponse {
  message InterestRate {
    string currency = 1;
    string interest_rate = 2;
  }

  repeated InterestRate list = 1;
}